--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <link href="tendies.png" rel="shortcut icon" type="image/png"/>
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Montserrat" rel="stylesheet"/>
     <link href="styles.css" rel="stylesheet"/>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-1481537824954340",
+        enable_page_level_ads: true
+      });
+    </script>
     <title>When Is Tendie Day?</title>
   </head>
   <body>
